plugins {
	id 'fabric-loom' version '1.9-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven { url "https://maven.nucleoid.xyz/" }
	maven { url "https://api.modrinth.com/m" }
    mavenCentral()
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // SGUI
    modImplementation include("eu.pb4:sgui:${project.sgui_version}")
    
    // PlaceholderAPI
    modImplementation include("eu.pb4:placeholder-api:${project.placeholder_api_version}")
    
    // SnakeYAML for parsing the old config files
    implementation include("org.yaml:snakeyaml:2.3")

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

test {
	useJUnitPlatform()
	systemProperty 'net.bytebuddy.experimental', 'true'
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	forkEvery = 5
}

task resetAndRun {
    dependsOn(runServer)
}